<resources>
    <string name="app_name">Nanodegree Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="capstone_app">Capstone</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="my_quests">My Quests</string>

</resources>
