<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.android.nanodegreeportfolio.PortfolioActivityFragment"
    android:orientation="vertical"
    tools:showIn="@layout/activity_portfolio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_quests"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/BigButtonLight"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer" />

    <Button
        style="@style/BigButtonLight"
        android:text="@string/scores_app"
        android:id="@+id/scores_app" />

    <Button
        style="@style/BigButtonLight"
        android:text="@string/library_app"
        android:id="@+id/library_app" />

    <Button
        style="@style/BigButtonLight"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger" />

    <Button
        style="@style/BigButtonLight"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader" />

    <Button
        style="@style/BigButtonAccent"
        android:text="@string/capstone_app"
        android:id="@+id/capstone_app" />
</LinearLayout>
